@@ -6,13 +6,13 @@ Inspired by:
 """
 
 from django.http import HttpResponseRedirect
+from django.utils.http import urlencode
 from django.utils.translation import gettext as _
 
 try:
-    from urllib.parse import parse_qsl, urlencode, urlparse
+    from urllib.parse import parse_qsl, urlparse
 except ImportError:
     from urlparse import parse_qsl
-    from urllib import urlencode
     from urlparse import urlparse
 
 import requests
@@ -39,8 +39,8 @@ class OAuthError(Exception):
 
 class OAuthClient(object):
 
-    def __init__(self, request, consumer_key, consumer_secret, 
-                 request_token_url, access_token_url, callback_url, 
+    def __init__(self, request, consumer_key, consumer_secret,
+                 request_token_url, access_token_url, callback_url,
                  parameters=None, provider=None):
 
         self.request = request
@@ -72,7 +72,8 @@ class OAuthClient(object):
             get_params['oauth_callback'] \
                 = self.request.build_absolute_uri(self.callback_url)
             rt_url = self.request_token_url + '?' + urlencode(get_params)
-            oauth = OAuth1(self.consumer_key, client_secret=self.consumer_secret)
+            oauth = OAuth1(self.consumer_key,
+                           client_secret=self.consumer_secret)
             response = requests.post(url=rt_url, auth=oauth)
             if response.status_code != 200:
                 raise OAuthError(
@@ -83,13 +84,14 @@ class OAuthClient(object):
 
     def get_access_token(self):
         """
-        Obtain the access token to access private resources at the API endpoint.
+        Obtain the access token to access private resources at the API
+        endpoint.
         """
         if self.access_token is None:
             request_token = self._get_rt_from_session()
-            oauth = OAuth1(self.consumer_key, 
+            oauth = OAuth1(self.consumer_key,
                            client_secret=self.consumer_secret,
-                           resource_owner_key=request_token['oauth_token'], 
+                           resource_owner_key=request_token['oauth_token'],
                            resource_owner_secret=request_token['oauth_token_secret'])
             at_url = self.access_token_url
             # Passing along oauth_verifier is required according to:
@@ -108,12 +110,16 @@ class OAuthClient(object):
 
     def _get_rt_from_session(self):
         """
-        Returns the request token cached in the session by ``_get_request_token``
+        Returns the request token cached in the session by
+        ``_get_request_token``
         """
         try:
-            return self.request.session['oauth_%s_request_token' % get_token_prefix(self.request_token_url)]
+            return self.request.session['oauth_%s_request_token'
+                                        % get_token_prefix(
+                                            self.request_token_url)]
         except KeyError:
-            raise OAuthError(_('No request token saved for "%s".') % get_token_prefix(self.request_token_url))
+            raise OAuthError(_('No request token saved for "%s".')
+                             % get_token_prefix(self.request_token_url))
 
     def is_valid(self):
         try:
@@ -126,24 +132,22 @@ class OAuthClient(object):
 
     def get_redirect(self, authorization_url):
         """
-        Returns a ``HttpResponseRedirect`` object to redirect the user to the
-        URL the OAuth provider handles authorization.
+        Returns a ``HttpResponseRedirect`` object to redirect the user
+        to the URL the OAuth provider handles authorization.
         """
         request_token = self._get_request_token()
-        if self.provider.require_callback_url:
-            url = '%s?oauth_token=%s&oauth_callback=%s' \
-                % (authorization_url, request_token['oauth_token'],
-                    self.request.build_absolute_uri(self.callback_url))
-        else:
-            url = '%s?oauth_token=%s' % (authorization_url, request_token['oauth_token'])
+        params = {'oauth_token': request_token['oauth_token'],
+                  'oauth_callback': self.request.build_absolute_uri(
+                      self.callback_url)}
+        url = authorization_url + '?' + urlencode(params)
         return HttpResponseRedirect(url)
 
 
 class OAuth(object):
     """
-    Base class to perform oauth signed requests from access keys saved in a user's
-    session.
-    See the ``OAuthTwitter`` class below for an example.
+    Base class to perform oauth signed requests from access keys saved
+    in a user's session. See the ``OAuthTwitter`` class below for an
+    example.
     """
 
     def __init__(self, request, consumer_key, secret_key, request_token_url):
@@ -157,10 +161,13 @@ class OAuth(object):
         Get the saved access token for private resources from the session.
         """
         try:
-            return self.request.session['oauth_%s_access_token' % get_token_prefix(self.request_token_url)]
+            return self.request.session['oauth_%s_access_token'
+                                        % get_token_prefix(
+                                            self.request_token_url)]
         except KeyError:
             raise OAuthError(
-                _('No access token saved for "%s".') % get_token_prefix(self.request_token_url))
+                _('No access token saved for "%s".')
+                % get_token_prefix(self.request_token_url))
 
     def query(self, url, method="GET", params=dict(), headers=dict()):
         """
@@ -168,16 +175,18 @@ class OAuth(object):
         POST or GET data.
         """
         access_token = self._get_at_from_session()
-        oauth = OAuth1(self.consumer_key,
-                       client_secret=self.secret_key,
-                       resource_owner_key=access_token['oauth_token'],
-                       resource_owner_secret=access_token['oauth_token_secret'])
+        oauth = OAuth1(
+            self.consumer_key,
+            client_secret=self.secret_key,
+            resource_owner_key=access_token['oauth_token'],
+            resource_owner_secret=access_token['oauth_token_secret'])
         response = getattr(requests, method.lower())(url,
                                                      auth=oauth,
                                                      headers=headers,
                                                      params=params)
         if response.status_code != 200:
             raise OAuthError(
-                _('No access to private resources at "%s".') % get_token_prefix(self.request_token_url))
+                _('No access to private resources at "%s".')
+                % get_token_prefix(self.request_token_url))
 
         return response.text
