@@ -2,6 +2,8 @@
 
 	* socialaccount: Added Bitbucket provider.
 
+	* Jack Shedd contributed Tumblr support, thanks!
+
 2014-01-15  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* "excessivedemon" contributed Flickr support, thanks!
